Normalización de filenames y legibilidad

--- a/projects/Fantasy/webroot/assets/styles/style.css
+++ b/projects/Fantasy/webroot/assets/styles/style.css
@@ -201,7 +201,7 @@ ul {
 	margin-top: 10px;
 }
 
-#sideBar #twitter {
+#sidebar #twitter {
 	padding-right: 30px;
 	padding-left: 30px;
 }
@@ -233,7 +233,7 @@ ul {
 	width: 760px;
 }
 
-#sideBar {
+#sidebar {
 	float: right;
 	height: 500px;
 	padding-right: 0px;
