dbconn-*, permisos de Noticia, cambios varios

--- a/projects/Fantasy/webroot/include/pre.html
+++ b/projects/Fantasy/webroot/include/pre.html
@@ -6,9 +6,9 @@
                 <meta name="keywords" content="clusterSS, fantasy, beisbol venezolano, liga venezolana de beisbol profesional"/>
                 <meta name="description" content="Proyecto de Fantasy de la liga venezolana de beisbol profesional."/>
 
-                <link rel="stylesheet" href="../assets/styles/style.css" type="text/css"/>
-                <link rel="Shortcut Icon" href="../assets/images/10thinning.ico">
-                <link href="../styles/style_index.css" rel="stylesheet" type="text/css"/>
+                <link rel="stylesheet" href="assets/styles/style.css" type="text/css"/>
+                <link rel="Shortcut Icon" href="assets/images/10thinning.ico">
+                <link href="styles/style_index.css" rel="stylesheet" type="text/css"/>
                 <style type="text/css">
                         body {
                                 background-image: url(assets/images/background1.png);
@@ -34,7 +34,7 @@
                                                         <input type="submit"                    name="Login"    class="submit"   value="login"    tabindex="3"/>
                                                 </p>
                                         </form>
-                                        <span class="Boton"><a href="../registro.php">Regístrate</a></span>
+                                        <span class="Boton"><a href="registro.php">Regístrate</a></span>
                                 </div>
 
                                 <div id="updates">
