Modelo integrado y tonterías a los dbconn y demás

--- a/projects/Fantasy/webroot/include/post.html
+++ b/projects/Fantasy/webroot/include/post.html
@@ -41,8 +41,9 @@
                         <div id="footer">
                                 <span class="logoCluster"></span>
                                 <div id="contacto">
-                                        <p>Powered by Cluster System Solutions &amp; Ñángara</p>
-                                        <p>Septiembre-Diciembre 2011.</p>
+                                        <p>Ñángara &amp; Cluster System Solutions</p>
+                                        <p>CI3715 - Septiembre-Diciembre 2011</p>
+                                        <p>Universidad Simón Bolívar</p>
                                 </div>
                                 <span class="logoNiangara"></span>
                         </div>
