--- a/projects/Fantasy/webroot/include/pre.html
+++ b/projects/Fantasy/webroot/include/pre.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
         <head>
-                <title>Super Sistema 2.0</title>
+                <title>Fantasy</title>
                 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-                <meta name="keywords" content="clusterSS, fantasy, beisbol venezolano, liga venezolana de beisbol profesional"/>
-                <meta name="description" content="Proyecto de Fantasy de la liga venezolana de beisbol profesional."/>
+                <meta name="keywords"    content="fantasy, beisbol venezolano, liga venezolana de beisbol profesional, lvbp"/>
+                <meta name="description" content="Fantasy de la liga venezolana de beisbol profesional."/>
 
                 <link rel="stylesheet" href="assets/styles/style.css" type="text/css"/>
                 <link rel="Shortcut Icon" href="assets/images/10thinning.ico">
