--- a/projects/Fantasy/webroot/include/post.html
+++ b/projects/Fantasy/webroot/include/post.html
@@ -6,10 +6,10 @@
                                         </div>
                                 </div>
                         </div><!-- content -->
-                        <div id="footer">
-                                <p><a href="reglas.php">Reglas</a> | <a href="faq.php">FAQ</a> | <a href="informacion.php">Acerca de</a></p>
-                                <p class="copyright">Ñángara &amp; Cluster System Solutions © 2011</p>
-                        </div>
-                </div>
+                </div><!-- wrapper -->
+        <div id="footer">
+                <p><a href="reglas.php">Reglas</a> | <a href="faq.php">FAQ</a> | <a href="informacion.php">Acerca de</a></p>
+                <p class="copyright">Ñángara &amp; Cluster System Solutions © 2011</p>
+        </div>
         </body>
 </html>
