--- a/projects/Fantasy/webroot/static/styles/main_style.css
+++ b/projects/Fantasy/webroot/static/styles/main_style.css
@@ -11,8 +11,7 @@ div { border: 1px solid white; }
 }
 
 body {
-  /*background: #E6E3DC url(../images/background.png) repeat-x;*/
-  background-color: #E6E3DC;
+  background: #000000 url(../images/bit.gif) repeat-x;
 }
 
 a {
@@ -74,62 +73,34 @@ input[type="submit"] {
 
 /* Main structure style *******************************************************/
 
-#marquee {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 999;
-  
-  width: 100%;
-  
-  background-color: #6D8103;
-  
-  font-size: medium;
-  color: #CCCCCC;
-}
-
-#marquee > div {
-  display: table;
+#wrapper {
   width: 900px;
   
   margin: 0 auto;
-  padding: 0.85em 0 0.65em;
-  
-  text-align: center;
 }
 
-#marquee span {
-  display: table-cell;
-  width: 15%;
-  font-weight: bold;
-}
-
-#marquee marquee {
-  display: table-cell;
-}
-
-#wrapper {
-}
-
-#wrapper > div {
-  display: block;
+#header,
+#updates,
+#footer {
+  clear: both;
 }
 
 #header {
-  width: 100%;
+  height: 180px;
+
+  padding-top: 30px;
   
-  padding-top: 3em;
+  background-color: #3D3D3D;
   
-  background-color: #434343;
-  
-  color: #E6E3DC;
+  color: #E6E4DD;
 }
 
 #logo {
-  width: 900px;
-  min-height: 50px;
+  float: left;
   
-  margin: 1em auto 1.5em;
+  height: 50px;
+  
+  margin: 0 0 20px 30px;
 }
 
 #logo img {
@@ -149,13 +120,46 @@ input[type="submit"] {
   text-decoration: underline;
 }
 
+#login {
+  float: right;
+  
+  height: 30px;
+  
+  margin: 10px 0 30px;
+}
+
+#updates {
+  display: table;
+  
+  height: 40px;
+  
+  margin: 0 auto 30px;
+  padding: 10px;
+  
+  background-color: #919E42;
+  color: #000000;
+}
+
+#updates span {
+  display: table-row;
+}
+
+#updates strong,
+#updates marquee {
+  display: table-cell;
+}
+
+#updates strong {
+  width: 10%;
+}
+
 #navigation {
 }
 
 #navigation ul {
   display: block;
   
-  border-bottom: 8px solid #6D8103;
+  border-bottom: 8px solid #728603;
   
   font-size: medium;
   text-align: center;
@@ -164,24 +168,24 @@ input[type="submit"] {
 #navigation li {
   display: inline-block;
   
-  margin: 0 0.1em;
+  margin: 0 4px;
 }
 
 #navigation li a {
   display: block;
   
-  padding: 0.5em 0.5em 0.25em;
+  padding: 8px 12px 5px;
   
-  color: #E6E3DC;
   text-align: center;
   text-decoration: none;
 }
 
 #navigation li a:hover,
 #navigation .on {
-  background-color: #6D8103;
-  -moz-border-radius: 0.5em 0.5em 0 0;
-  -webkit-border-radius: 0.5em 0.5em 0 0;
+  color: inherit;
+  background-color: #728603;
+  -moz-border-radius: 8px 8px 0 0;
+  -webkit-border-radius: 8px 8px 0 0;
 }
 
 #navigation li a:hover {
@@ -193,20 +197,26 @@ input[type="submit"] {
 }
 
 #content {
-  width: 975px;
   margin: 0 auto;
-    
-  /*background: brown url(../images/FondoEscrito.jpg) no-repeat;*/
-}
-
-#content > div {
-  display: inline-block;
-  
-  padding: 1em 0.5em;
 }
 
 #main {
-  width: 75%;
+  overflow-y: auto;
+  height: 500px;
+}
+
+#main,
+#sidebar {
+  padding: 1em 0.5em;
+  
+  background-color: #E6E4DD;
+  
+  color: #000000;
+}
+
+#main {
+  float: left;
+  width: 650px;
   min-height: 500px;
 }
 
@@ -218,7 +228,7 @@ input[type="submit"] {
 #sidebar {
   float: right;
   
-  width: 20%;
+  width: 200px;
 }
 
 #sidebar div {
@@ -226,18 +236,14 @@ input[type="submit"] {
 }
 
 #footer {
-  padding: 1em 1em 2em;
+  height: 80px;
   
-  background: #434343 /*url(../images/footback2.png) no-repeat*/;
-  /*-moz-border-radius-bottomleft: 10px;
-  -moz-border-radius-bottomright: 10px;
-  -webkit-border-bottom-left-radius: 10px;
-  -webkit-border-bottom-right-radius: 10px;*/
+  padding: 20px 20px 0;
   
-  /*border: 1px solid grey;*/
+  background: #000000;
   
   font-size: medium;
-  color: #E6E3DC;
+  color: #E6E4DD;
 }
 
 p.copyright {
@@ -249,20 +255,22 @@ p.copyright {
 
 #main > div {
   display: block;
+  
+  clear: both;
 }
 
 div.admin-options {
   float: right;
 }
 
-#noticias #main > div,
+#index #else > div,
 #jugadores #main > div,
 #equipos #main > div,
 #estadios #main > div {
   padding: 25px;
 }
 
-#noticias #main > div img,
+#index #else > div img,
 #jugadores #main > div img,
 #equipos #main > div img,
 #estadios #main > div img {
@@ -273,11 +281,11 @@ div.admin-options {
   border: 1px solid #000000;
 }
 
-#noticias #main > div {
+#index #else > div {
   min-height: 150px;
 }
 
-#noticias #main > div img {
+#index #else > div img {
   width: auto;
   height: 150px;
 }
@@ -378,7 +386,7 @@ div.admin-options {
   position: relative; /* important */
   overflow: hidden; /* important */
   
-  margin: 0 auto;
+  margin: 0 auto 1.5em;
 }
 
 #sliderContent {
@@ -415,16 +423,4 @@ div.admin-options {
 
 .clear {
   clear: both;
-}
-
-#login {
-  display: table;
-  width: 600px;
-  margin: 1em auto;
-}
-
-#login div {
-  display: table-cell;
-  padding: 1em;
-  width: 300px;
 }
