XHTML válido de verdad (al menos el index)

--- a/projects/Fantasy/webroot/include/post.html
+++ b/projects/Fantasy/webroot/include/post.html
@@ -1,8 +1,8 @@
         </div><!-- main -->
         <div id="sidebar">
           <div id="twitter">
-            <script src="http://widgets.twimg.com/j/2/widget.js"></script>
-            <script src="static/js/twitter.js"></script>
+            <script src="http://widgets.twimg.com/j/2/widget.js" type="application/javascript"/>
+            <script src="static/js/twitter.js" type="application/javascript"/>
           </div>
         </div>
       </div><!-- content -->
